@@ -1,5 +1,13 @@
 2013-03-08  Michal Staniaszek  <mxs968@cs.bham.ac.uk>
 
+	* estimator_gaussian.c: Both functions take a parameter to indicate whether to normalise
+	the function being output to file. This is the only place that it can be done before the
+	file is output - the normaliser cannot be passed in as a function estimate is required to
+	compute it.
+
+	* experimenter.c: Stuttering function takes into consideration the -r switch.
+	If on, the random function filename will be used to attempt to read files to stutter.
+
 	* generator.c: Modified old generator code so that it returns a double_arr struct
 	rather than messing around with pointers. Function data is output independently of
 	event generation so that the graph is not jagged. When generating with the muparser
@@ -10,6 +18,7 @@
 	file names to read from. If the -r switch is passed, the function_outfile parameter
 	will be used in the filename. Otherwise, the expression_outfile parameter will be used.
 	This allows the estimators to read from files generated by both types of generators.
+	Estimator now takes normalisation flag. Returned data is normalised if it is nonzero.
 
 2013-03-06  Michal Staniaszek  <mxs968@cs.bham.ac.uk>
 
